--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.profiles.active=dev
 spring.jackson.serialization.indent_output=true
 spring.jpa.open-in-view=false
 spring.main.banner-mode=off
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
