--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>2.8.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.45.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
