--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>2.45.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>5.18.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
