--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Trading advertisement graber</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <version>42.2.18</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
