--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.12.1</version>
+            <version>1.13.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
@@ -79,6 +79,12 @@
             <groupId>ru.redcom.lib</groupId>
             <artifactId>dadata-api-client</artifactId>
             <version>0.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.scraperapi</groupId>
+            <artifactId>sdk</artifactId>
+            <version>1.1</version>
         </dependency>
 
     </dependencies>
